microservice-arch/yml/2048.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game2048
spec:
  replicas: 1
  selector:
    matchLabels:
      app: game2048
  template:
    metadata:
      labels:
        app: game2048
    spec:
      containers:
      - name: game2048
        image: 8sem/2048-game
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: game2048-service
spec:
  selector:
    app: game2048
  ports:
    - port: 80
      targetPort: 80
