microservice-arch/yml/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gamehub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gamehub
  template:
    metadata:
      labels:
        app: gamehub
    spec:
      containers:
      - name: gamehub
        image: 8sem/gamehub-app
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: gamehub-service
spec:
  selector:
    app: gamehub
  ports:
    - port: 80
      targetPort: 80
