microservice-arch/yml/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gamehub-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: gamehub.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gamehub-service
                port:
                  number: 80
    - host: snake.gamehub.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: snake-service
                port:
                  number: 80
    - host: 2048.gamehub.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: game2048-service
                port:
                  number: 80
